--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -179,7 +179,3 @@ mdl-simple-tooltip div {
 .mdl-layout__drawer-button {
   margin-top: 6px !important;
 }
-
-.top-bar-height {
-  max-height: 64px;
-}
